--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,8 @@ NODE_ENV=production
 
 PORT=5000
 
-DB_HOST=localhost
+DB_HOST=mysql.railway.internal
 DB_PORT=3306
-DB_USER=devuser
-DB_PASSWORD=123456789
-DB_NAME=test
+DB_USER=root
+DB_PASSWORD=luQMvyIwzkkWhotWOfoDRuacxnHtkdsI
+  
